<?xml version="1.0"?>
<package>
  <name>jude_arun_whill</name>
  <version>0.1.0</version>
  <description>Jude and arun whill Package</description>

  <maintainer email="judestainz@yahoo.com">Jude</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autoware_config_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>wiimote</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>autoware_config_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


</package>
